--- a/IKEA/main.css
+++ b/IKEA/main.css
@@ -1,93 +1,132 @@
 :root {
-    --color-black-1: black;
-    --color-black-2: rgb(70, 70, 70);
-    --color-white-1: white;
-    --color-white-2: rgb(225, 225, 225);
-    --size-font-1: 0.8rem;
-    --size-padding-1: 10px 20px;
-    --size-button-1: 20px 20px;
+  --color-black-1: black;
+  --color-black-2: rgb(70, 70, 70);
+  --color-white-1: white;
+  --color-white-2: rgb(225, 225, 225);
+  --color-white-3: rgb(240, 240, 240);
+  --size-font-1: 0.8rem;
+  --size-padding-1: 10px 20px;
+  --size-button-1: 20px 20px;
+  --font: "Noto Sans KR", sans-serif;
 }
 
 * {
-    padding: 0px;
-    margin: 0px;
+  padding: 0px;
+  margin: 0px;
+  font-family: var(--font);
 }
 
 content {
-    display: flex;
+  display: flex;
 }
 
 header {
-    background-color: var(--color-black-1);
+  background-color: var(--color-black-1);
 }
 
 header ul {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 header li {
-    padding: var(--size-padding-1);
-    font-size: var(--size-font-1);
-    list-style: none;
+  padding: var(--size-padding-1);
+  font-size: var(--size-font-1);
+  list-style: none;
 }
 
 header a {
-    text-decoration: none;
-    color:var(--color-white-1);
+  text-decoration: none;
+  color: var(--color-white-1);
 }
 
 header a:hover {
-    text-decoration: underline white;
+  text-decoration: underline white;
 }
 
 aside {
-    width: 10vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+  width: 10vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 aside button {
-    padding: 15px 15px;
-    border-radius: 100px;
-    background-color: var(--color-white-1);
-    border-color:rgba(0, 0, 0, 0)
+  padding: 15px 15px;
+  border-radius: 100px;
+  background-color: var(--color-white-1);
+  border-color: rgba(0, 0, 0, 0);
 }
 
 aside button:hover {
-    background-color: var(--color-white-2);
+  background-color: var(--color-white-2);
 }
 
 #navBarBtn:hover {
-    place-content: 메뉴;
+  place-content: 메뉴;
 }
 
 .navBar {
-    display: none;
-    width: 100%;
-    height: 100%;
-    background-color: wheat;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: wheat;
 }
 
 sectionWrap {
-    margin-right: 10vw;
-    width: 100%;
+  margin-right: 10vw;
+  width: 100%;
 }
 
+sectionWrap a {
+    text-decoration: none;
+    color:var(--color-black-1);
+  }
+
 .headMenu {
-    padding: 30px 0px;
-    border-bottom: var(--color-black-2) solid 1px;
+  padding: 30px 0px;
+  border-bottom: var(--color-black-2) solid 1px;
 }
 
 .headMenu ul {
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#searchInputBox {
+    width: 100%;
+    height: 100%;
+    padding:var(--size-padding-1);
+}
+
+#searchInputBox a {
+    text-decoration: underline;
+}
+
+#searchInputBox input {
+    width: 100%;
+    line-height: 40px;
+    border-radius: 50px;
+    border-color: alpha;
+    background-color: var(--color-white-3);
+}
+
+#selectShopBtn {
+    width: 20%;
+    height: 100%;
+    padding: var(--size-padding-1);
+}
+
+.userOptionBtn {
+    width: 20px;
+    height: 20px;
+    padding: var(--size-padding-1);
 }
 
 #a {
-    background-color: wheat;
+  background-color: wheat;
 }
